[package]
name = "bevy_transform_gizmo"
version = "1.1.1"
edition = "2024"
description = "A 3D transform gizmo for Bevy"

# ORIGNAL REPO INFO BELOW
# authors = [
#     "Aevyrie Roessler <aevyrie@gmail.com>",
#     "Foresight Mining Software Corporation",
# ]
# description = "A 3D transform gizmo for Bevy"
# license = "MIT OR Apache-2.0"
# repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_transform_gizmo"
# documentation = "https://docs.rs/bevy_transform_gizmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.15.3", default-features = false, features = [
bevy = { path = "../bevy", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "bevy_window"
] }
log = "0.4.27"

[dev-dependencies]
# bevy = { version = "0.15.3", default-features = false, features = [
bevy = { path = "../bevy", default-features = false, features = [
    "bevy_pbr",
    "bevy_winit",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
] }
